# duq

./: LICENSE  README.md
src/: CMakeLists.txt
src/duq/: duq.c
